[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.157715, 0.211833, 0.296875, 1 )

[node name="ConnectionPanel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -125.0
margin_right = 150.0
margin_bottom = 125.0
color = Color( 0.227451, 0.282353, 0.368627, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -38.0
margin_right = 100.0
margin_bottom = 38.0

[node name="Row1" type="HBoxContainer" parent="ConnectionPanel/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0

[node name="NameLabel" type="Label" parent="ConnectionPanel/VBoxContainer/Row1"]
margin_right = 42.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 1
text = "Name:"
valign = 1

[node name="NameInput" type="LineEdit" parent="ConnectionPanel/VBoxContainer/Row1"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Participant"

[node name="Row2" type="HBoxContainer" parent="ConnectionPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 52.0

[node name="IP_Label" type="Label" parent="ConnectionPanel/VBoxContainer/Row2"]
margin_right = 17.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 1
text = "IP:"
valign = 1

[node name="IP_Input" type="LineEdit" parent="ConnectionPanel/VBoxContainer/Row2"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Row3" type="HBoxContainer" parent="ConnectionPanel/VBoxContainer"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 76.0

[node name="HostButton" type="Button" parent="ConnectionPanel/VBoxContainer/Row3"]
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Host"

[node name="JoinButton" type="Button" parent="ConnectionPanel/VBoxContainer/Row3"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Join"

[node name="ParticipantsPanel" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0
color = Color( 0.227451, 0.282353, 0.368627, 1 )

[node name="Title" type="Label" parent="ParticipantsPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -74.0
margin_top = 20.0
margin_right = 74.0
margin_bottom = 34.0
text = "Waiting for Participants"

[node name="ParticipantList" type="ItemList" parent="ParticipantsPanel"]
margin_left = 49.0
margin_top = 59.5
margin_right = 253.0
margin_bottom = 318.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="StartButton" type="Button" parent="ParticipantsPanel"]
margin_left = 92.0
margin_top = 329.5
margin_right = 217.0
margin_bottom = 358.5
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"
